fix css overflow

--- a/sdk/hooks/src/index.css
+++ b/sdk/hooks/src/index.css
@@ -33,6 +33,7 @@ body {
 #root {
   width: 100vw;
   height: 100vh;
+  overflow: auto;
 }
 
 h1 {
